force-app/main/default/objects/C360_ExciseQuota__c.object
<CustomObject>
    <fields>
        <fullName>AlreadyPurchasedVolumeUnit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlreadyPurchasedVolume__c</fullName>
        <inlineHelpText>Volume ที่ซื้อไปแล้ว</inlineHelpText>
        <label>Already Purchased Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedDate__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Excise Quota</relationshipLabel>
        <relationshipName>Excise_Quota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentURL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExciseDocumentNumber__c</fullName>
        <inlineHelpText>สค.02</inlineHelpText>
        <label>Excise Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaterialGroupText__c</fullName>
        <label>Material Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Material Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Excise Quota</relationshipLabel>
        <relationshipName>Excise_Quota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodFrom__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RB9320 = SERVICE, COURIER&amp;MAIL ROOM SERVICE</fullName>
                </value>
                <value>
                    <fullName>RB9330 = SERVICE , OFFICE SUPPLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemainingDays__c</fullName>
        <formula>IF(
    ExpiryDate__c &gt; TODAY(),
    ExpiryDate__c - TODAY(),
    NULL
)</formula>
        <label>Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shiptoparty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-to party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Excise Quota (Ship-to party)</relationshipLabel>
        <relationshipName>Excise_Quota1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsageIndicator__c</fullName>
        <label>Usage Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VolumeinExciseDocumentUnit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VolumeinExciseDocument__c</fullName>
        <label>Volume in Excise Document</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Excise Quota</label>
    <nameField>
        <label>Excise Tax Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckIsChangeExciseTaxNumber</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Cannot change value of Excise Tax Number</errorMessage>
    </validationRules>
</CustomObject>